--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,29 @@
 * {
     padding: 0;
     margin: 0;
+    font-size: 12px;
+}
+
+.fl {
+    float: left;
+}
+
+.fr {
+    float: right;
+}
+
+.tc {
+    text-align: center;
+}
+
+.flex-row-between {
+    display: flex!important;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.flex-row-start {
+    display: flex!important;
+    flex-direction: row;
+    justify-content: flex-start;
 }
